# thesis-rust

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
bezier/: Cargo.toml  memory.x
bezier/src/: fixed_point.rs  floating_point.rs  main.rs  stackpaint.rs  stopwatch.rs
bezier/src/test-files/: bezdata1.txt  bezdata3.txt  bezdata4.txt
semihosting-files/: Cargo.toml  README.md  commands.txt  memory.x
semihosting-files/examples/: file_access.rs
semihosting-files/examples/files/: read.txt
semihosting-files/src/: lib.rs
stm32f207-hal/: Cargo.toml  FloPointLTOSizes.txt  memory.x
stm32f207-hal/ethernet/descriptor/: mod.rs
stm32f207-hal/examples/: delayblink.rs  ping.rs
stm32f207-hal/src/: delay.rs  interrupt_free_cell.rs  lib.rs  prelude.rs  rcc.rs  time.rs  timer.rs
stm32f207-hal/src/ethernet/: device.rs  mod.rs  pins.rs  receive.rs  ring.rs  transmit.rs
stm32f207-hal/src/ethernet/descriptor/: buffer_lengths.rs  mod.rs  status.rs
stm32f207-hal/src/gpio/: gpio_extension.rs  macros.rs  mod.rs  partially_erased_pin.rs
