[package]
name = "bezier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f2 = { version = "0.14.0", features = ["stm32f217", "rt"]}
stm32f207-hal = { path = "../stm32f207-hal" }
stm32f4 = {version = "0.14.0", features = ["stm32f429", "rt"]}
embedded-hal = "0.2.6"
alloc-cortex-m = "0.4.0"
semihosting-files = "0.1.4"
cstr_core = "0.2.4"
